kubernetes-yml/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-generic-ingress
spec:
  rules:
  - host: teste.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80
